grammar/grammar.ebnf
# Inox Grammar Mirror 0.1 Pre-alpha

This is a human-readable grammar mirror. The authoritative language rules are in `docs/INOX_CANONICAL.md`.

```ebnf
module          ::= "Module" module_name use_decl* module_item* EOF
module_name     ::= identifier ("." identifier)*
use_decl        ::= "Use" module_name

module_item     ::= type_section | const_section | state_section | function_decl

type_section    ::= "Type" type_decl*
type_decl       ::= struct_decl | range_decl | enum_short_decl | enum_block_decl

struct_decl     ::= identifier "Struct" struct_field* ";"
struct_field    ::= identifier type_name (":=" literal)?

range_decl      ::= identifier "Range" range_bound ".." range_bound

enum_short_decl ::= identifier "(" identifier ("," identifier)* ")"
enum_block_decl ::= identifier "Enum" identifier* ";"

var_block       ::= "Var" var_decl* ";"
var_decl        ::= identifier type_name? (":=" expression)?
local_decl      ::= identifier type_name (":=" expression)?

function_decl   ::= qualified_name "(" parameter_list? ")" return_type? ":" statement* ";"
block_close     ::= ";"   (* End/end is not a keyword and is not a block closer. *)
qualified_name  ::= identifier ("." identifier)?
parameter_list  ::= receiver_param | normal_param ("," normal_param)*
receiver_param  ::= "Self" "mut"? ("," normal_param)*
normal_param    ::= identifier type_name
return_type     ::= type_name

statement       ::= local_decl | var_block | if_stmt | unless_stmt | while_stmt | repeat_stmt
                  | until_stmt | for_stmt | case_stmt | try_stmt | raise_stmt | retry_stmt
                  | return_stmt | exit_stmt | leave_stmt | continue_stmt | expression_stmt

if_stmt         ::= "if" expression NEWLINE statement* elif_clause* else_clause? ";"
elif_clause     ::= "elif" expression NEWLINE statement*
else_clause     ::= "else" NEWLINE statement*

unless_stmt     ::= "unless" expression NEWLINE statement* ";"
                  (* negated guard: the body runs when the condition is false; no elif/else *)

while_stmt      ::= "while" expression NEWLINE statement* ";"
repeat_stmt     ::= "repeat" statement* ";"
until_stmt      ::= "until" expression
for_stmt        ::= "for" identifier "in" expression ".." expression ("(" expression ")")? NEWLINE statement* ";"
                  (* iterator is implicit, read-only, loop-scoped, and may not shadow *)

case_stmt       ::= "case" expression NEWLINE case_arm* otherwise_arm? ";"
case_arm        ::= expression NEWLINE statement* | expression statement
otherwise_arm   ::= "otherwise" NEWLINE statement* | "otherwise" statement

try_stmt        ::= "try" NEWLINE statement*
                    (except_clause ensure_clause? | ensure_clause) ";"
except_clause   ::= "except" NEWLINE (typed_handlers | statement*)
typed_handlers  ::= exception_handler+ else_handler?
exception_handler ::= ("On" exception_type | "On" identifier exception_type) NEWLINE statement* ";"
else_handler    ::= "Else" NEWLINE statement* ";"
ensure_clause   ::= "ensure" NEWLINE statement*
raise_stmt      ::= "Raise" expression | "Raise"
retry_stmt      ::= "Retry" "(" expression ")"
exception_type  ::= identifier

return_stmt     ::= "Return" expression
exit_stmt       ::= "Exit"
leave_stmt      ::= "leave"
continue_stmt   ::= "continue"

expression      ::= assignment
assignment      ::= logical_or (":=" assignment)?
```

Parser implementation may temporarily lag this mirror. Current conformance gaps are tracked in the Layer B status sections of `docs/INOX_CANONICAL.md`.
```

(* Canonical zero-argument rule: empty parentheses are forbidden. *)
(* A declaration without parameters omits the parameter list entirely. *)
(* A call without arguments omits parentheses entirely. *)
