src/compiler/parser/Parser.cpp
// SPDX-License-Identifier: MPL-2.0
// Copyright © 2026 Marcelo Fortes and Inox contributors. All rights reserved.
//
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

#include "Parser.h"

#include "../lexer/Lexer.h"

#include <memory>
#include <string>
#include <utility>
#include <vector>

namespace inox::compiler::parser {

namespace {

constexpr const char* kVarRemovedMessage =
    "the 'Var' block and 'var'/'mut var' declarations were removed (CANON-5); "
    "declare locals inline: 'Name := Value', 'Name Type := Value', or 'Name TStruct'";

constexpr const char* kAssignmentInExpressionMessage =
    "':=' is a statement, not an expression (CANON-5): an assignment cannot "
    "appear inside an expression, a condition or an initializer";

constexpr const char* kOldForStepMessage =
    "the for-loop step is written 'step S' (ADR-0010): write "
    "'for I in A..B step S' instead of 'for I in A..B (S)'";

// Sets a parser flag for the lifetime of a scope and restores it afterwards,
// also when a ParseError propagates.
class FlagScope {
public:
    explicit FlagScope(bool& flag) : flag_(flag), saved_(flag) { flag_ = true; }
    ~FlagScope() { flag_ = saved_; }
    FlagScope(const FlagScope&) = delete;
    FlagScope& operator=(const FlagScope&) = delete;

private:
    bool& flag_;
    bool saved_;
};

ast::ExpressionPtr makeSyntheticIdentifier(std::string name)
{
    return std::make_unique<ast::IdentifierExpression>(std::move(name));
}

// A chained-assignment target is a variable or a field path (`P.X`, `.X` in a
// `with` body). Index targets are excluded: re-reading `V[I]` after `I`
// changed would read a different element.
bool isChainTarget(const ast::Expression& expression)
{
    if (expression.kind() == ast::AstNodeKind::IdentifierExpression) {
        return true;
    }
    if (expression.kind() != ast::AstNodeKind::CallExpression) {
        return false;
    }
    const auto& call = static_cast<const ast::CallExpression&>(expression);
    if (call.callee().kind() != ast::AstNodeKind::IdentifierExpression ||
        static_cast<const ast::IdentifierExpression&>(call.callee()).name() != "__member" ||
        call.arguments().size() != 2 ||
        call.arguments()[1]->kind() != ast::AstNodeKind::IdentifierExpression) {
        return false;
    }
    return isChainTarget(*call.arguments()[0]);
}

ast::ExpressionPtr cloneChainTarget(const ast::Expression& expression)
{
    if (expression.kind() == ast::AstNodeKind::IdentifierExpression) {
        return makeSyntheticIdentifier(
            static_cast<const ast::IdentifierExpression&>(expression).name());
    }
    const auto& call = static_cast<const ast::CallExpression&>(expression);
    std::vector<ast::ExpressionPtr> arguments;
    arguments.push_back(cloneChainTarget(*call.arguments()[0]));
    arguments.push_back(cloneChainTarget(*call.arguments()[1]));
    return std::make_unique<ast::CallExpression>(
        makeSyntheticIdentifier("__member"), std::move(arguments));
}

} // namespace

ParseError::ParseError(std::string message, lexer::SourceLocation location)
    : std::runtime_error(std::move(message)), location_(location)
{
}

const lexer::SourceLocation& ParseError::location() const
{
    return location_;
}

Parser::Parser(std::vector<lexer::Token> tokens) : tokens_(std::move(tokens))
{
    if (tokens_.empty() || tokens_.back().kind != TokenKind::EndOfFile) {
        tokens_.push_back(lexer::Token{TokenKind::EndOfFile, "", "", {}});
    }
}

Parser::Parser(std::string_view source)
    : tokens_(lexer::Lexer(source).tokenize())
{
}

std::unique_ptr<ast::ModuleNode> Parser::parseModule()
{
    if (!matchKeyword("module")) {
        errorAtCurrent("expected 'Module'");
    }

    auto module = std::make_unique<ast::ModuleNode>(
        parseQualifiedName("expected module name"));

    while (!isAtEnd()) {
        module->items().push_back(parseModuleItem());
    }

    return module;
}

ast::ExpressionPtr Parser::parseExpression()
{
    auto expression = parseValue();
    if (!isAtEnd()) {
        errorAtCurrent("unexpected token after expression");
    }
    return expression;
}

Parser::DepthGuard::DepthGuard(const Parser& owner, std::size_t& counter,
                               std::size_t limit, const char* what)
    : counter_(counter)
{
    if (++counter_ > limit) {
        --counter_;
        owner.errorAtCurrent("maximum " + std::string(what) + " nesting depth exceeded (implementation limit: " +
                             std::to_string(limit) + " levels)");
    }
}

Parser::DepthGuard::~DepthGuard()
{
    --counter_;
}

void Parser::checkExpressionDepth(const ast::Expression& expression) const
{
    if (expression.depth() > kMaxExpressionDepth) {
        errorAtCurrent("maximum expression nesting depth exceeded (implementation limit: " +
                       std::to_string(kMaxExpressionDepth) +
                       " levels); split it into smaller expressions");
    }
}

// CANON-4: newlines terminate statements. A simple statement must therefore be
// followed by a line break, the end of the block, or the end of the input.
ast::StatementPtr Parser::endSimpleStatement(ast::StatementPtr statement)
{
    if (!isAtEnd() && !check(TokenKind::Semicolon) &&
        peek().location.line == previous().location.line) {
        errorAtCurrent("expected line break after statement; newlines terminate statements in Inox");
    }
    return statement;
}

ast::StatementPtr Parser::parseStatement()
{
    DepthGuard guard(*this, statementNesting_, kMaxStatementNesting, "statement");
    // CANON-4: `:` has one meaning, it declares a function or subroutine and
    // opens its body. A bare `:` ... `;` block inside a routine is illegal.
    if (check(TokenKind::Colon)) {
        errorAtCurrent(
            "a bare ':' block is illegal (CANON-4): ':' only declares a "
            "function or subroutine; write the statements directly in the "
            "enclosing body");
    }

    // CANON-5: the old `Var ... ;` block and `var`/`mut var` declarations were
    // removed. `Var` and `mut` stay reserved; reject them with a migration hint.
    if (checkKeyword("var") || checkKeyword("mut")) {
        errorAtCurrent(kVarRemovedMessage);
    }

    if (matchKeyword("if")) {
        return parseIfStatement();
    }
    if (matchKeyword("unless")) {
        return parseUnlessStatement();
    }
    if (matchKeyword("with")) {
        return parseWithStatement();
    }
    if (matchKeyword("while")) {
        return parseWhileStatement();
    }
    if (matchKeyword("repeat")) {
        return parseRepeatStatement();
    }
    if (matchKeyword("until")) {
        return endSimpleStatement(parseUntilStatement());
    }
    if (matchKeyword("for")) {
        return parseForInStatement();
    }
    if (matchKeyword("case")) {
        return parseCaseStatement();
    }
    if (matchKeyword("try")) {
        return parseTryStatement();
    }
    if (matchKeyword("raise")) {
        return endSimpleStatement(parseRaiseStatement());
    }
    if (matchKeyword("retry")) {
        return endSimpleStatement(parseRetryStatement());
    }
    if (matchKeyword("return")) {
        return endSimpleStatement(parseReturnStatement());
    }
    if (matchKeyword("exit")) {
        return endSimpleStatement(std::make_unique<ast::ExitStatement>());
    }
    if (matchKeyword("leave")) {
        return endSimpleStatement(std::make_unique<ast::LeaveStatement>());
    }
    if (matchKeyword("continue")) {
        return endSimpleStatement(std::make_unique<ast::ContinueStatement>());
    }

    if (atTypedLocalStatementStart()) {
        return endSimpleStatement(parseTypedLocalStatement());
    }

    return endSimpleStatement(parseExpressionStatement());
}

void Parser::appendStatement(std::vector<ast::StatementPtr>& statements)
{
    statements.push_back(parseStatement());
    for (auto& pending : pendingStatements_) {
        statements.push_back(std::move(pending));
    }
    pendingStatements_.clear();
}

std::vector<ast::StatementPtr> Parser::parseStatements()
{
    std::vector<ast::StatementPtr> statements;
    while (!isAtEnd()) {
        appendStatement(statements);
    }
    return statements;
}

std::vector<ast::StatementPtr> Parser::parseHeaderDelimitedBlock()
{
    requireHeaderLineBreak();
    auto body = parseBlockBody();
    consumeBlockClose();
    return body;
}

// A value expression: everything except assignment. `:=` is a statement in
// Inox (CANON-5, v3.27), so it may not appear inside an expression.
ast::ExpressionPtr Parser::parseValue()
{
    DepthGuard guard(*this, expressionNesting_, kMaxExpressionNesting, "expression");
    auto expression = parseOr();
    if (check(TokenKind::ColonEqual)) {
        errorAtCurrent(kAssignmentInExpressionMessage);
    }
    return expression;
}

// A call argument: a value, or `Field := Value` for named struct construction
// (CANON-9). The named form takes exactly one `:=`.
ast::ExpressionPtr Parser::parseArgument()
{
    if (check(TokenKind::Identifier) && current_ + 1 < tokens_.size() &&
        tokens_[current_ + 1].kind == TokenKind::ColonEqual) {
        const lexer::Token& field = advance();
        const lexer::Token& op = advance();
        auto value = parseValue();
        return makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op),
            std::make_unique<ast::IdentifierExpression>(field.lexeme),
            std::move(value));
    }
    return parseValue();
}

void Parser::markParenthesized(const ast::Expression* node)
{
    if (node != nullptr) {
        parenthesized_.insert(node);
    }
}

bool Parser::isParenthesized(const ast::Expression* node) const
{
    return node != nullptr && parenthesized_.contains(node);
}

void Parser::requireNoLogicalMix(
    const ast::Expression* operand, std::string_view outerOp,
    const lexer::Token& opToken) const
{
    // Canonical Layer A: and/or/xor are all relational-combining logical
    // operators. Their relative precedence IS defined (and > xor > or), but
    // people memorize it wrong, so mixing two DIFFERENT logical operators
    // without parentheses is rejected. An explicitly parenthesized operand is
    // always allowed.
    if (operand == nullptr || isParenthesized(operand)) {
        return;
    }
    if (operand->kind() != ast::AstNodeKind::BinaryExpression) {
        return;
    }
    const auto& binary = static_cast<const ast::BinaryExpression&>(*operand);
    const ast::BinaryOperator inner = binary.op();
    const bool innerIsLogical =
        inner == ast::BinaryOperator::And ||
        inner == ast::BinaryOperator::Or ||
        inner == ast::BinaryOperator::Xor;
    if (!innerIsLogical) {
        return;
    }
    std::string innerName;
    switch (inner) {
        case ast::BinaryOperator::And: innerName = "and"; break;
        case ast::BinaryOperator::Or: innerName = "or"; break;
        case ast::BinaryOperator::Xor: innerName = "xor"; break;
        default: return;
    }
    if (innerName == std::string(outerOp)) {
        return;  // same operator chained (a and b and c) is fine
    }
    throw ParseError(
        "mixing '" + innerName + "' and '" + std::string(outerOp) +
            "' requires explicit parentheses; write '" + innerName +
            "' grouped in parentheses to make the order unambiguous",
        opToken.location);
}

void Parser::requireNoBitwiseMix(
    const ast::Expression* operand, std::string_view outerOp,
    const lexer::Token& opToken) const
{
    // Canonical Layer A: different bitwise families (bitand/bitxor/bitor) and
    // shifts mixed together must be parenthesized. Same-operator chains are fine.
    if (operand == nullptr || isParenthesized(operand)) {
        return;
    }
    if (operand->kind() != ast::AstNodeKind::BinaryExpression) {
        return;
    }
    const auto& binary = static_cast<const ast::BinaryExpression&>(*operand);
    const ast::BinaryOperator inner = binary.op();
    std::string innerName;
    switch (inner) {
        case ast::BinaryOperator::BitAnd: innerName = "bitand"; break;
        case ast::BinaryOperator::BitXor: innerName = "bitxor"; break;
        case ast::BinaryOperator::BitOr: innerName = "bitor"; break;
        case ast::BinaryOperator::ShiftLeft: innerName = "shl"; break;
        case ast::BinaryOperator::ShiftRight: innerName = "shr"; break;
        default: return;
    }
    if (innerName == std::string(outerOp)) {
        return;  // same operator chained is fine
    }
    throw ParseError(
        "mixing bitwise operators '" + innerName + "' and '" +
            std::string(outerOp) +
            "' requires explicit parentheses to make the order unambiguous",
        opToken.location);
}

ast::ExpressionPtr Parser::parseOr()
{
    auto expression = parseXor();

    while (checkKeyword("or")) {
        const lexer::Token& op = advance();
        requireNoLogicalMix(expression.get(), "or", op);
        auto right = parseXor();
        requireNoLogicalMix(right.get(), "or", op);
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseXor()
{
    auto expression = parseAnd();

    while (checkKeyword("xor")) {
        const lexer::Token& op = advance();
        requireNoLogicalMix(expression.get(), "xor", op);
        auto right = parseAnd();
        requireNoLogicalMix(right.get(), "xor", op);
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseAnd()
{
    auto expression = parseRelational();

    while (checkKeyword("and")) {
        const lexer::Token& op = advance();
        requireNoLogicalMix(expression.get(), "and", op);
        auto right = parseRelational();
        requireNoLogicalMix(right.get(), "and", op);
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseRelational()
{
    auto expression = parseMembership();

    while (check(TokenKind::Equal) || check(TokenKind::Hash) ||
           check(TokenKind::Less) || check(TokenKind::Greater) ||
           check(TokenKind::LessEqual) || check(TokenKind::GreaterEqual)) {
        const lexer::Token& op = advance();
        auto right = parseMembership();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseMembership()
{
    auto expression = parseRange();

    if (matchKeyword("in")) {
        const lexer::Token& op = previous();
        auto right = parseRange();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
        // CANON-20 (ADR-0008): 'in' is non-associative.
        if (checkKeyword("in")) {
            throw ParseError(
                "'in' is non-associative (CANON-20): 'X in A in B' has no "
                "meaning; parenthesize the intended grouping",
                peek().location);
        }
    }

    return expression;
}

ast::ExpressionPtr Parser::parseRange()
{
    auto expression = parseBitOr();

    if (match(TokenKind::DotDot)) {
        const lexer::Token& op = previous();
        auto right = parseBitOr();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
        // CANON-20 (ADR-0008): '..' is non-associative; a range has exactly
        // two bounds.
        if (check(TokenKind::DotDot)) {
            throw ParseError(
                "'..' is non-associative (CANON-20): a range has exactly two "
                "bounds, so 'A..B..C' has no meaning",
                peek().location);
        }
    }

    return expression;
}

ast::ExpressionPtr Parser::parseBitOr()
{
    auto expression = parseBitXor();

    while (checkKeyword("bitor")) {
        const lexer::Token& op = advance();
        requireNoBitwiseMix(expression.get(), "bitor", op);
        auto right = parseBitXor();
        requireNoBitwiseMix(right.get(), "bitor", op);
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseBitXor()
{
    auto expression = parseBitAnd();

    while (checkKeyword("bitxor")) {
        const lexer::Token& op = advance();
        requireNoBitwiseMix(expression.get(), "bitxor", op);
        auto right = parseBitAnd();
        requireNoBitwiseMix(right.get(), "bitxor", op);
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseBitAnd()
{
    auto expression = parseShift();

    while (checkKeyword("bitand")) {
        const lexer::Token& op = advance();
        requireNoBitwiseMix(expression.get(), "bitand", op);
        auto right = parseShift();
        requireNoBitwiseMix(right.get(), "bitand", op);
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseShift()
{
    auto expression = parseAdditive();

    while (checkKeyword("shl") || checkKeyword("shr")) {
        const lexer::Token& op = advance();
        auto right = parseAdditive();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseAdditive()
{
    auto expression = parseMultiplicative();

    while ((check(TokenKind::Plus) || check(TokenKind::Minus)) && !atLineBreakInHeader()) {
        const lexer::Token& op = advance();
        auto right = parseMultiplicative();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseMultiplicative()
{
    auto expression = parseUnary();

    while (check(TokenKind::Star) || check(TokenKind::Slash) ||
           checkKeyword("div") || checkKeyword("mod")) {
        const lexer::Token& op = advance();
        auto right = parseUnary();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parseUnary()
{
    DepthGuard guard(*this, expressionNesting_, kMaxExpressionNesting, "expression");
    if (check(TokenKind::Plus) || check(TokenKind::Minus) ||
        checkKeyword("not") || checkKeyword("bitnot")) {
        const lexer::Token& op = advance();
        auto operand = parseUnary();
        return makeExpr<ast::UnaryExpression>(
            unaryOperatorFor(op), std::move(operand));
    }

    return parsePower();
}

ast::ExpressionPtr Parser::parsePower()
{
    DepthGuard guard(*this, expressionNesting_, kMaxExpressionNesting, "expression");
    auto expression = parsePostfix();

    if (match(TokenKind::Caret)) {
        const lexer::Token& op = previous();
        auto right = parsePower();
        expression = makeExpr<ast::BinaryExpression>(
            binaryOperatorFor(op), std::move(expression), std::move(right));
    }

    return expression;
}

ast::ExpressionPtr Parser::parsePostfix()
{
    auto expression = parsePrimary();

    for (;;) {
        // CANON-4: newlines terminate statements. A `(` or `[` that begins a
        // new line never continues the expression of the previous line as a
        // call or an index (the same rule as for a leading `.` below).
        if ((check(TokenKind::LeftParen) || check(TokenKind::LeftBracket)) &&
            current_ > 0 && peek().location.line > previous().location.line) {
            break;
        }
        if (match(TokenKind::LeftParen)) {
            if (check(TokenKind::RightParen)) {
                errorAtCurrent("empty parentheses are not allowed in calls; omit parentheses when there are no arguments");
            }
            auto arguments = parseArgumentList();
            consume(TokenKind::RightParen, "expected ')' after argument list");
            expression = makeExpr<ast::CallExpression>(
                std::move(expression), std::move(arguments));
            continue;
        }

        if (match(TokenKind::LeftBracket)) {
            auto index = parseValue();
            consume(TokenKind::RightBracket, "expected ']' after index expression");

            std::vector<ast::ExpressionPtr> arguments;
            arguments.push_back(std::move(expression));
            arguments.push_back(std::move(index));
            expression = makeExpr<ast::CallExpression>(
                makeSyntheticIdentifier("__index"), std::move(arguments));
            continue;
        }

        // A '.' that begins a NEW line is NOT postfix member access on the
        // current expression — it is a dot-prefixed statement inside a 'with'
        // body (e.g. `.FY := 20`). Newlines terminate statements in Inox, so a
        // leading-dot on the next line must not be glued to the previous
        // expression (which would wrongly parse `10` then `.FY` as `10.FY`).
        if (check(TokenKind::Dot) &&
            !withTargetStack_.empty() &&
            peek().location.line > previous().location.line) {
            break;
        }

        // A '.' that begins a NEW line is never postfix member access on the
        // current expression. Newlines terminate statements in Inox, so a
        // leading dot on the next line starts a new (dot-prefixed) statement
        // inside a 'with' body — e.g. `.FY := 20`. Without this guard, the
        // target `P` of `with P` would glue to the next line's `.FX`, and a
        // right-hand `10` would glue to the following `.FY` as `10.FY`.
        if (check(TokenKind::Dot) &&
            current_ > 0 &&
            peek().location.line > previous().location.line) {
            break;
        }

        if (match(TokenKind::Dot)) {
            const lexer::Token& name = consume(
                TokenKind::Identifier, "expected member name after '.'");

            std::vector<ast::ExpressionPtr> arguments;
            arguments.push_back(std::move(expression));
            arguments.push_back(std::make_unique<ast::IdentifierExpression>(name.lexeme));
            expression = makeExpr<ast::CallExpression>(
                makeSyntheticIdentifier("__member"), std::move(arguments));
            continue;
        }

        break;
    }

    return expression;
}

ast::ExpressionPtr Parser::parsePrimary()
{
    if (match(TokenKind::IntegerLiteral)) {
        return std::make_unique<ast::LiteralExpression>(
            ast::LiteralKind::Integer, tokenText(previous()));
    }

    if (match(TokenKind::FloatLiteral)) {
        return std::make_unique<ast::LiteralExpression>(
            ast::LiteralKind::Float, tokenText(previous()));
    }

    if (match(TokenKind::StringLiteral)) {
        return std::make_unique<ast::LiteralExpression>(
            ast::LiteralKind::String, previous().lexeme);
    }

    if (match(TokenKind::CharLiteral)) {
        return std::make_unique<ast::LiteralExpression>(
            ast::LiteralKind::Char, previous().lexeme);
    }

    if (checkKeyword("true") || checkKeyword("false")) {
        const lexer::Token& token = advance();
        return std::make_unique<ast::LiteralExpression>(
            ast::LiteralKind::Boolean, token.normalized);
    }

    if (check(TokenKind::Identifier)) {
        const lexer::Token& token = advance();
        return std::make_unique<ast::IdentifierExpression>(token.lexeme);
    }

    if (match(TokenKind::LeftParen)) {
        auto expression = parseValue();
        consume(TokenKind::RightParen, "expected ')' after expression");
        markParenthesized(expression.get());
        return expression;
    }

    // Leading '.' inside a 'with' body: expand to __member(__with_N, Member)
    if (check(TokenKind::Dot) && !withTargetStack_.empty()) {
        advance(); // consume '.'
        const lexer::Token& memberName = consume(
            TokenKind::Identifier, "expected member name after '.' in 'with' body");
        std::vector<ast::ExpressionPtr> arguments;
        arguments.push_back(
            std::make_unique<ast::IdentifierExpression>(withTargetStack_.back()));
        arguments.push_back(
            std::make_unique<ast::IdentifierExpression>(memberName.lexeme));
        return makeExpr<ast::CallExpression>(
            makeSyntheticIdentifier("__member"), std::move(arguments));
    }

    errorAtCurrent("expected expression");
}

// ADR-0010: the old step form `for I in A..B (S)` / `A..B(S)` is gone. It is
// recognized here, before the header is parsed, so the programmer gets a
// migration message instead of "not a function". The form is a parenthesized
// group that ends the header line, follows `..` at depth 0, and follows a
// literal or `)`, which cannot be called. After an identifier (`1..F(2)`,
// `1..F (2)`) it is a call and is left to the analyzer.
void Parser::rejectOldForStep() const
{
    const std::size_t line = tokens_[current_].location.line;
    std::size_t end = current_;
    while (end < tokens_.size() && tokens_[end].kind != TokenKind::EndOfFile &&
           tokens_[end].location.line == line) {
        ++end;
    }
    if (end == current_ || tokens_[end - 1].kind != TokenKind::RightParen) {
        return;
    }
    // Find the `(` matching the final `)`.
    std::size_t depth = 0;
    std::size_t open = end - 1;
    for (std::size_t i = end; i-- > current_;) {
        if (tokens_[i].kind == TokenKind::RightParen) {
            ++depth;
        } else if (tokens_[i].kind == TokenKind::LeftParen && --depth == 0) {
            open = i;
            break;
        }
    }
    if (open == current_ || tokens_[open].kind != TokenKind::LeftParen) {
        return;
    }
    bool rangeBefore = false;
    std::size_t level = 0;
    for (std::size_t i = current_; i < open; ++i) {
        if (tokens_[i].kind == TokenKind::LeftParen) {
            ++level;
        } else if (tokens_[i].kind == TokenKind::RightParen && level > 0) {
            --level;
        } else if (tokens_[i].kind == TokenKind::DotDot && level == 0) {
            rangeBefore = true;
        }
    }
    if (!rangeBefore) {
        return;
    }
    // The group is a step only when it follows a complete operand: a literal,
    // an identifier or a `)`. After an operator or `..` it is a parenthesized
    // bound, e.g. `A..(B - 1)`.
    const lexer::Token& before = tokens_[open - 1];
    const bool literal = before.kind == TokenKind::IntegerLiteral ||
                         before.kind == TokenKind::FloatLiteral;
    const bool operandEnd = literal || before.kind == TokenKind::Identifier ||
                            before.kind == TokenKind::RightParen;
    if (!operandEnd) {
        return;
    }
    // After an identifier the group is a call, with or without a space before
    // it (`Twice(N)` and `Twice (N)` mean the same); the analyzer explains the
    // step syntax when the identifier names a value.
    if (before.kind != TokenKind::Identifier) {
        throw ParseError(kOldForStepMessage, tokens_[open].location);
    }
}

std::vector<ast::ExpressionPtr> Parser::parseArgumentList()
{
    std::vector<ast::ExpressionPtr> arguments;

    if (check(TokenKind::RightParen)) {
        return arguments;
    }

    do {
        arguments.push_back(parseArgument());
    } while (match(TokenKind::Comma));

    return arguments;
}

ast::StatementPtr Parser::parseTypedLocalStatement()
{
    std::vector<std::string> names;
    const lexer::Token& name = consume(TokenKind::Identifier, "expected variable name");
    names.push_back(name.lexeme);
    while (match(TokenKind::Comma)) {
        const lexer::Token& nextName = consume(TokenKind::Identifier, "expected variable name after ','");
        names.push_back(nextName.lexeme);
    }

    const lexer::Token& type = consume(TokenKind::Identifier, "expected type name");

    std::vector<ast::StatementPtr> declarations;
    if (match(TokenKind::ColonEqual)) {
        // CANON-5 grouped declaration (v3.26): `A, B T := X` evaluates X exactly
        // once. The first name receives X; every later name is initialized from
        // the first, so side effects in X happen once.
        ast::ExpressionPtr initializer = parseValue();
        declarations.push_back(std::make_unique<ast::VarStatement>(
            false, names.front(), std::move(initializer), type.lexeme));
        for (std::size_t i = 1; i < names.size(); ++i) {
            declarations.push_back(std::make_unique<ast::VarStatement>(
                false, names[i], makeSyntheticIdentifier(names.front()),
                type.lexeme));
        }
    } else {
        for (const std::string& declarationName : names) {
            declarations.push_back(std::make_unique<ast::VarStatement>(
                false, declarationName, nullptr, type.lexeme));
        }
    }

    if (declarations.size() == 1) {
        return std::move(declarations.front());
    }

    return std::make_unique<ast::VarBlockStatement>(std::move(declarations));
}

ast::StatementPtr Parser::parseIfStatement()
{
    auto condition = parseValue();
    requireHeaderLineBreak();
    auto thenBody = parseDelimitedBody({"elif", "else"});

    std::vector<ast::ElseIfClause> elseIfClauses;
    while (matchKeyword("elif")) {
        auto elseIfCondition = parseValue();
        requireHeaderLineBreak();
        elseIfClauses.push_back(ast::ElseIfClause{
            std::move(elseIfCondition),
            parseDelimitedBody({"elif", "else"})
        });
    }

    std::vector<ast::StatementPtr> elseBody;
    if (matchKeyword("else")) {
        requireHeaderLineBreak();
        elseBody = parseDelimitedBody({});
    }
    consumeBlockClose();

    return std::make_unique<ast::IfStatement>(
        std::move(condition),
        std::move(thenBody),
        std::move(elseIfClauses),
        std::move(elseBody));
}

ast::StatementPtr Parser::parseUnlessStatement()
{
    auto condition = parseValue();
    auto body = parseHeaderDelimitedBlock();
    return std::make_unique<ast::UnlessStatement>(
        std::move(condition), std::move(body));
}

ast::StatementPtr Parser::parseWithStatement()
{
    auto target = parseValue();
    requireHeaderLineBreak();

    const std::string bindingName = "__with_" + std::to_string(withCounter_++);
    withTargetStack_.push_back(bindingName);

    auto body = parseBlockBody();
    consumeBlockClose();

    withTargetStack_.pop_back();

    return std::make_unique<ast::WithStatement>(
        std::move(target), std::move(body), bindingName);
}

ast::StatementPtr Parser::parseWhileStatement()
{
    auto condition = parseValue();
    auto body = parseHeaderDelimitedBlock();
    return std::make_unique<ast::WhileStatement>(
        std::move(condition), std::move(body));
}

ast::StatementPtr Parser::parseRepeatStatement()
{
    auto body = parseBlockBody();
    consumeBlockClose();
    return std::make_unique<ast::RepeatStatement>(std::move(body));
}

ast::StatementPtr Parser::parseUntilStatement()
{
    if (atStatementBoundary()) {
        errorAtCurrent("expected condition after 'until'");
    }
    return std::make_unique<ast::UntilStatement>(parseValue());
}

ast::StatementPtr Parser::parseForInStatement()
{
    const lexer::Token& iterator = consume(TokenKind::Identifier, "expected loop iterator");
    if (!matchKeyword("in")) {
        errorAtCurrent("expected 'in' after loop iterator");
    }
